--- a/src/DeviceInfo.Plugin/DeviceInfo.Plugin.csproj
+++ b/src/DeviceInfo.Plugin/DeviceInfo.Plugin.csproj
@@ -1,7 +1,6 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="MSBuild.Sdk.Extras/1.6.47">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.0;netstandard2.0;net45;MonoAndroid71;Xamarin.iOS10;uap10.0.15063;Xamarin.TVOS10;Xamarin.WatchOS10;Xamarin.Mac20;Tizen40</TargetFrameworks>
+    <TargetFrameworks>netstandard1.0;netstandard2.0;net45;MonoAndroid71;Xamarin.iOS10;uap10.0.16299;Xamarin.TVOS10;Xamarin.WatchOS10;Xamarin.Mac20;Tizen40</TargetFrameworks>
     <AssemblyName>Plugin.DeviceInfo</AssemblyName>
     <RootNamespace>Plugin.DeviceInfo</RootNamespace>
     <Product>$(AssemblyName) ($(TargetFramework))</Product>
@@ -19,7 +18,7 @@
     <PackageTags>xamarin, pcl, xam.pcl, settings, windows phone, winphone, wp8, winrt, android, xamarin.forms, ios</PackageTags>
     <Title>Device Information Plugin for Xamarin and Windows</Title>
     <Description>
-      Receive information about the device that you are using. Properties such as Model, Operatin System, Version, Id, and even the ability to generate a unique Id for your application based off of these properties.
+      Receive information about the device that you are using. Properties such as Model, Operating System, Version, Id, and even the ability to generate a unique Id for your application based off of these properties.
     </Description>
     <Copyright>Copyright 2018</Copyright>
     <RepositoryUrl>https://github.com/jamesmontemagno/DeviceInfoPlugin</RepositoryUrl>
@@ -42,7 +41,6 @@
   </PropertyGroup>
   <ItemGroup>
      <None Include="..\..\nuget\readme.txt" PackagePath="readme.txt" Pack="true" />
-    <PackageReference Include="MSBuild.Sdk.Extras" Version="1.4.0" PrivateAssets="All" />
     <Compile Include="**\*.shared.cs" />
   </ItemGroup>
 
@@ -50,11 +48,11 @@
   </ItemGroup>
 
   <ItemGroup Condition=" $(TargetFramework.StartsWith('uap10.0')) ">
-    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="5.2.3" />
-    <SDKReference Include="WindowsDesktop, Version=10.0.15063.0">
+    <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.5" />
+    <SDKReference Include="WindowsDesktop, Version=10.0.16299.0">
       <Name>Windows Desktop Extensions for the UWP</Name>
     </SDKReference>
-    <SDKReference Include="WindowsMobile, Version=10.0.15063.0">
+    <SDKReference Include="WindowsMobile, Version=10.0.16299.0">
       <Name>Windows Mobile Extensions for the UWP</Name>
     </SDKReference>
     <Compile Include="**\*.uwp.cs" />
@@ -87,16 +85,8 @@
     <Compile Include="**\*.apple.cs" />
   </ItemGroup>
 
-
-
-
-
   <ItemGroup Condition=" $(TargetFramework.StartsWith('Tizen')) ">
     <Compile Include="**\*.tizen.cs" />
     <PackageReference Include="Tizen.NET" Version="4.0.0" />
   </ItemGroup>
-
-
-
-  <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
